force-app/main/default/objects/Line_Item__c/fields/Bill_SD__c.field-meta.xml
<CustomField>
    <fullName>Bill_SD__c</fullName>
    <label>Bill SD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>