force-app/main/default/objects/Line_Item__c/fields/City_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>City_Tax_Rate__c</fullName>
    <formula>Home_Service__r.Account__r.City_lookup__r.Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Tax Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>