force-app/main/default/objects/Line_Item__c/fields/Cost_of_Goods__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Goods__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Cost of Goods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>