force-app/main/default/objects/Line_Item__c/fields/Home_Service__c.field-meta.xml
<CustomField>
    <fullName>Home_Service__c</fullName>
    <label>Home Service</label>
    <referenceTo>Home_Services__c</referenceTo>
    <relationshipLabel>Line Items (HS)</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>