force-app/main/default/objects/Line_Item__c/fields/Installer_Points__c.field-meta.xml
<CustomField>
    <fullName>Installer_Points__c</fullName>
    <label>Installer Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>