force-app/main/default/objects/Line_Item__c/fields/Latch_Suggested_Retail_w_Install__c.field-meta.xml
<CustomField>
    <fullName>Latch_Suggested_Retail_w_Install__c</fullName>
    <formula>Unit_Price__c *  Quantity__c  * Home_Service__r.Retail_Multiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latch Suggested Retail w/Install</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>