force-app/main/default/objects/Line_Item__c/fields/Latch_Suggested_Retail_w_Install_Fee__c.field-meta.xml
<CustomField>
    <fullName>Latch_Suggested_Retail_w_Install_Fee__c</fullName>
    <formula>Latch_Suggested_Retail_w_Install__c * ( 1 + Home_Service__r.Dealer_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latch Suggested Retail w/Install &amp; Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>