force-app/main/default/objects/Line_Item__c/fields/Latch_UOM__c.field-meta.xml
<CustomField>
    <fullName>Latch_UOM__c</fullName>
    <formula>Product__r.UOM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latch UOM</label>
    <type>Text</type>
</CustomField>