force-app/main/default/objects/Line_Item__c/fields/method__c.field-meta.xml
<CustomField>
    <fullName>method__c</fullName>
    <label>Method</label>
    <length>30</length>
    <type>Text</type>
</CustomField>