force-app/main/default/objects/Line_Item__c/fields/Service_Check__c.field-meta.xml
<CustomField>
    <fullName>Service_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Check</label>
    <type>Checkbox</type>
</CustomField>