force-app/main/default/objects/Line_Item__c/fields/Taxable__c.field-meta.xml
<CustomField>
    <fullName>Taxable__c</fullName>
    <formula>Product__r.Taxable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>