force-app/main/default/objects/Line_Item__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Quantity__c * Product__r.Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost of Goods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>