force-app/main/default/objects/Line_Item__c/fields/Total_Installation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Installation_Cost__c</fullName>
    <formula>Product__r.Installation_Cost__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost of Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>