force-app/main/default/objects/Line_Item__c/fields/Total_Sales_Price_p__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price_p__c</fullName>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>