force-app/main/default/objects/Line_Item__c/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <label>Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>