force-app/main/default/objects/Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Home_Service__c</columns>
    <columns>Cost_of_Goods__c</columns>
    <columns>Cost__c</columns>
    <columns>Billing_Frequency__c</columns>
    <columns>Monthly_Investment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <columns>County_Tax_Amount__c</columns>
    <columns>City_Tax_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>